qt/multimedia/gen_qimageencodercontrol.h

class QImageEncoderControl;
class QImageEncoderSettings;
class QMetaObject;
class QSize;
typedef struct QImageEncoderControl QImageEncoderControl;
typedef struct QImageEncoderSettings QImageEncoderSettings;
typedef struct QMetaObject QMetaObject;
typedef struct QSize QSize;
QMetaObject* QImageEncoderControl_metaObject(const QImageEncoderControl* self);
void* QImageEncoderControl_metacast(QImageEncoderControl* self, const char* param1);
int QImageEncoderControl_metacall(QImageEncoderControl* self, int param1, int param2, void** param3);
struct miqt_string QImageEncoderControl_tr(const char* s);
struct miqt_string QImageEncoderControl_trUtf8(const char* s);
struct miqt_array /* of struct miqt_string */  QImageEncoderControl_supportedImageCodecs(const QImageEncoderControl* self);
struct miqt_string QImageEncoderControl_imageCodecDescription(const QImageEncoderControl* self, struct miqt_string codec);
struct miqt_array /* of QSize* */  QImageEncoderControl_supportedResolutions(const QImageEncoderControl* self, QImageEncoderSettings* settings, bool* continuous);
QImageEncoderSettings* QImageEncoderControl_imageSettings(const QImageEncoderControl* self);
void QImageEncoderControl_setImageSettings(QImageEncoderControl* self, QImageEncoderSettings* settings);
struct miqt_string QImageEncoderControl_tr2(const char* s, const char* c);
struct miqt_string QImageEncoderControl_tr3(const char* s, const char* c, int n);
struct miqt_string QImageEncoderControl_trUtf82(const char* s, const char* c);
struct miqt_string QImageEncoderControl_trUtf83(const char* s, const char* c, int n);
const QMetaObject* QImageEncoderControl_staticMetaObject();
void QImageEncoderControl_delete(QImageEncoderControl* self);